# UltraDisplayOS

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  job-logs.txt
.github/workflows/: build.yml  main.yml
buildroot/: buildroot.config
buildroot/board/ultradisplay/: genimage.cfg  grub-iso.cfg  grub.cfg  post-build.sh  post-image.sh
buildroot/board/ultradisplay/rootfs_overlay/: init
buildroot/board/ultradisplay/rootfs_overlay/etc/avahi/services/: ultradisplay.service
client/: CMakeLists.txt  main.cpp
client/audio/: alsa_playback.cpp  alsa_playback.hpp
client/compositor/: drm_display.c  drm_display.h  sync_engine.cpp  sync_engine.hpp
client/decoder/: multi_gpu_manager.hpp  vaapi_decoder.cpp  vaapi_decoder.hpp
client/input/: input_forwarder.cpp  input_forwarder.hpp
client/network/: client_transport.cpp  client_transport.hpp  net_optimizer.cpp  net_optimizer.hpp
client/system/: hw_optimizer.cpp  hw_optimizer.hpp
client/tui/: app.cpp  app.hpp  theme.hpp
client/tui/screens/: connection_screen.cpp  connection_screen.hpp  discovery_screen.cpp  discovery_screen.hpp  wifi_screen.cpp  wifi_screen.hpp
scripts/: ota_updater.py
server/: CMakeLists.txt  main.cpp
server/audio/: wasapi_capture.cpp  wasapi_capture.hpp
server/capture/: dxgi_capture.cpp  dxgi_capture.hpp  scene_analyzer.cpp  scene_analyzer.hpp
server/encoder/: adaptive_controller.cpp  adaptive_controller.hpp  amf_encoder.cpp  amf_encoder.hpp  d3d11_color_convert.cpp  d3d11_color_convert.hpp  encoder.hpp  encoder_factory.cpp  encoder_factory.hpp  encoder_sdk_config.hpp  nvenc_encoder.cpp  nvenc_encoder.hpp  qsv_encoder.cpp  qsv_encoder.hpp
server/gui/: discovery.cpp  discovery.hpp  gui_resources.h  tray_app.cpp  tray_app.hpp
server/input/: virtual_input.cpp  virtual_input.hpp
server/network/: server_transport.cpp  server_transport.hpp
server/service/: win_service.cpp  win_service.hpp
shared/: CMakeLists.txt
shared/audio/: audio_pipeline.cpp  audio_pipeline.hpp
shared/crypto/: ota_verify.hpp  tls_context.hpp
shared/protocol/: codec_config.hpp  edid.hpp  messages.hpp
shared/tests/: CMakeLists.txt  test_main.cpp
shared/transport/: congestion_gcc.cpp  congestion_gcc.hpp  fec.cpp  fec.hpp  multipath.cpp  multipath.hpp  pacer.cpp  pacer.hpp  transport.hpp
shared/util/: clock.hpp  log.cpp  log.hpp  pool.hpp  result.hpp  ring_buffer.hpp  simd.hpp  thread.hpp
